--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-kakao-login": "^2.1.1",
+    "react-kakao-maps-sdk": "^1.1.3",
     "react-query": "^3.39.2",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
@@ -47,8 +48,8 @@
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2",
     "usehooks-ts": "^2.6.0",
-    "vite-plugin-svgr": "^2.2.1",
     "uuid": "^9.0.0",
+    "vite-plugin-svgr": "^2.2.1",
     "vite-tsconfig-paths": "^3.5.0"
   },
   "devDependencies": {
