--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/styled-components": "^5.1.26",
     "aws-sdk": "^2.1227.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "facepaint": "^1.2.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
