--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
     "@types/styled-components": "^5.1.26",
+    "add": "^2.0.6",
     "aws-sdk": "^2.1227.0",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
@@ -36,6 +37,7 @@
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-aws-s3": "^1.5.0",
+    "react-chartjs-2": "^4.3.1",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -58,7 +60,8 @@
     "usehooks-ts": "^2.6.0",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.2.1",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite-tsconfig-paths": "^3.5.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "^18.8.0",
