chore:react-confirm-alert 라이브러리 추가

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/multer-s3": "^3.0.0",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-slick": "^0.23.10",
+    "@types/react-toastify": "^4.1.0",
     "@types/sockjs-client": "^1.1.1",
     "@types/stompjs": "^2.3.4",
     "@types/styled-components": "^5.1.26",
@@ -38,6 +39,7 @@
     "react": "^18.2.0",
     "react-aws-s3": "^1.5.0",
     "react-chartjs-2": "^4.3.1",
+    "react-confirm-alert": "^3.0.6",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
